--- a/newland_bobby_prototype/cases.html
+++ b/newland_bobby_prototype/cases.html
@@ -81,21 +81,34 @@
                 <h2>Galaxy Note 3</h2>
                 <div class="case-pics-row-1">
                    <ul>
-                       <li><a href="details.html"> <img src="images/galaxy_note_3_case_neo_hybrid.jpg" /></a></li>
-                       <li><a href="details.html"> <img src="images/note-case-2.jpg" /></a></li>
-                       <li><a href="details.html"> <img src="images/note-case-3.jpg" /></a></li>
-                       <li><a href="details.html"> <img src="images/note-case-4.jpg" /></a></li>
-                       <li><a href="details.html"> <img src="images/note-case-5.jpg" /></a></li>
-                       <li><a href="details.html"> <img src="images/note-case-6.jpg" /></a></li>
-                       <li><a href="details.html"> <img src="images/note-case-7.jpg" /></a></li>
-                       <li><a href="details.html"> <img src="images/note-case-8.jpg" /></a></li>
-                       <li><a href="details.html"> <img src="images/note-case-9.jpg" /></a></li>
-                       <li><a href="details.html"> <img src="images/note-case-10.jpg" /></a></li>
+                       <li><a href="details.html"> <img src="images/galaxy_note_3_case_neo_hybrid.jpg" />
+                          </li>
+                       <li><a href="details.html"> <img src="images/note-case-2.jpg" /></a>
+                           </li>
+                       <li><a href="details.html"> <img src="images/note-case-3.jpg" /></a>
+                          </li>
+                       <li><a href="details.html"> <img src="images/note-case-4.jpg" /></a>
+                          </li>
+                       <li><a href="details.html"> <img src="images/note-case-5.jpg" /></a>
+                           </li>
+                       <li><a href="details.html"> <img src="images/note-case-6.jpg" /></a>
+                          </li>
+                       <li><a href="details.html"> <img src="images/note-case-7.jpg" /></a>
+                          </li>
+                       <li><a href="details.html"> <img src="images/note-case-8.jpg" /></a>
+                           </li>
+                       <li><a href="details.html"> <img src="images/note-case-9.jpg" /></a>
+                           </li>
+                       <li><a href="details.html"> <img src="images/note-case-10.jpg" /></a>
+                         </li>
                    </ul>
                 </div>
 
             </div>
 
+            <div class="switch-btn">
+               <a href="index.html"> <img src="images/switch-phone-button.png" /></a>
+            </div>
         </div> <!-- content goes here -->
 
 
