--- a/newland_bobby_prototype/details.html
+++ b/newland_bobby_prototype/details.html
@@ -80,6 +80,7 @@
 
         <div class="detail-image">
             <img src="images/galaxy_note_3_case_neo_hybrid.jpg" />
+            <h4>Price: $19.99</h4>
         </div>
 
         <div class="detail-info" >
@@ -89,6 +90,7 @@
             <p>The Galaxy Note 3 Neo Hybrid is an assembly-type case with a TPU back cover and a polycarbonate frame. The Neo Hybrid is form-fitted to effectively protect your device from external impact. The Galaxy Note 3 neo Hybrid is designed to highlight the curves of the Galaxy Note 3. It fits precisely onto the phone for a natural and sleek look. The Galaxy Note 3 Neo Hybrid is a 2 part case that can be dissembled into a TPU back cover and a polycarbonate frame. The Neo Hybrid uses premium TPU material for extra durability. The TPU back cover will not sag or expand due to heat from the device.</p>
 
             </div>
+
             <div class="detail-list">
 
                 <ul>
