--- a/newland_bobby_prototype/index.html
+++ b/newland_bobby_prototype/index.html
@@ -22,6 +22,7 @@
 	<link rel="stylesheet" href="stylesheets/skeleton.css">
 	<link rel="stylesheet" href="stylesheets/layout.css">
     <link rel="stylesheet" href="stylesheets/bob-styles.css">
+    <link href='http://fonts.googleapis.com/css?family=Prosto+One' rel='stylesheet' type='text/css'>
 
 	<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -67,7 +68,7 @@
             <div class="sub-menu-area">
                 <div class="sub-menu">
                     <ul>
-                        <li><a href="cases.html">Cases </a>|</li>
+                        <li><a href="cases.html"> Cases </a>|</li>
                         <li>Screen Protectors |</li>
                         <li>Chargers |</li>
                         <li>Headsets</li>
@@ -78,15 +79,15 @@
 
 
             <div class="left-side-content">
-                <h1 id="main-search-title">Find Your Device</h1>
+                <h3 id="main-search-title">Find your device</h3>
 
 
-              <div id="main-search-bar">
+             <a href="cases.html"> <div id="main-search-bar">
                 <form action="get" class="search-form frame inbtn rlarge">
                     <input type="text" name="search" class="search-input" placeholder="  e.g galaxy note 3" />
                     <input class="search-btn" type="submit" value="Go" />
                 </form>
-              </div><!-- Main search bar -->
+              </div></a><!-- Main search bar -->
                <div class="dropdown-list">
                    <h4>Choose a Category </h4>
                 <select>
@@ -98,11 +99,14 @@
                 </select>
                </div><!-- dropdown-list -->
 
+                <div class="join-now">
+                    <h2>Join Now and Save</h2>
+                </div>
                 <div class="signup_btn">
                    <a href="register.html"> <img src="images/green-blue-clear-buttons-680_03.png" /></a>
                 </div>
                 <div class="signin-link">
-                    <a href="signin.html"><h4>Sign In</h4></a>
+                    <a href="signin.html"><h3>Sign In</h3></a>
                 </div>
 
             </div><!-- left side content -->
@@ -110,6 +114,20 @@
 
             <div class="right-side-container">
               <img src="images/Samsung-Galaxy-Note-3.png " />
+            </div>
+
+            <div class="item-list">
+                <h2>Recently Bought</h2>
+                <ul>
+                    <li><a href="cases.html"><h4>Otterbox Defender Case</h4></a></li>
+                    <li><a href="cases.html"><h4>Spigen Neo Hybrid Case</h4></a></li>
+                    <li><a href="cases.html"><h4>Samsung S-View Case</h4></a></li>
+                    <li><a href="cases.html"><h4>Samsung Wireless Charger</h4></a></li>
+                    <li><a href="cases.html"><h4>I Bolt Pro Car Dock</h4></a></li>
+                    <li><a href="cases.html"><h4>Samsung OEM Wired Headset</h4></a></li>
+
+
+                </ul>
             </div>
 
         </div> <!-- content goes here -->
