--- a/newland_bobby_prototype/register.html
+++ b/newland_bobby_prototype/register.html
@@ -93,6 +93,10 @@
 
             </div>
 
+            <div class="benefits">
+                <h5>Easily FIND the</h5> <br /><h3> COOLEST CASES</h3> <br /><h5>at the LOWEST PRICES</h5>
+            </div>
+
         </div> <!-- content goes here -->
 
 
