--- a/newland_bobby_prototype/signin.html
+++ b/newland_bobby_prototype/signin.html
@@ -92,6 +92,9 @@
                 </div>
 
             </div>
+            <div class="login-help">
+               <a href="register.html"> <p>Forgot Password</p></a>
+            </div>
 
         </div> <!-- content goes here -->
 
