--- a/newland_bobby_prototype/wishlist.html
+++ b/newland_bobby_prototype/wishlist.html
@@ -92,6 +92,13 @@
             <h2>Galaxy Note 3</h2>
             <h3>Spigen Neo Hybrid Case</h3>
             </div>
+            <div class="wish-items">
+                <ul>
+                    <li><h4>Samsung Wireless Charger</h4></li>
+                    <li><h4>I Bolt Pro Car Dock</h4></li>
+                </ul>
+                <a href="cases.html"> <h3>Continue Shopping</h3></a>
+            </div>
 
         </div> <!-- content goes here -->
 
