--- a/newland_bobby_prototype/cases.html
+++ b/newland_bobby_prototype/cases.html
@@ -9,8 +9,8 @@
   ================================================== -->
 	<meta charset="utf-8">
 	<title>The Case Place</title>
-	<meta name="description" content="">
-	<meta name="author" content="">
+	<meta name="description" content="Find any accessory for any device">
+	<meta name="author" content="Find any accessory for any device">
 
 	<!-- Mobile Specific Metas
   ================================================== -->
