--- a/newland_bobby_prototype/register.html
+++ b/newland_bobby_prototype/register.html
@@ -8,7 +8,7 @@
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>The Case Place</title>
+	<title>The Case Place | Register</title>
 	<meta name="description" content="Find any accessory for any device">
 	<meta name="author" content="Find any accessory for any device">
 
